--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -39,12 +39,12 @@
   align-items: center;
 }
 
-.container-item-2 {
-}
 
 .spiderman {
-  width: 150%;
+  width: 140%;
   transform: translate3d(-170px, 0, 0);
+
+  overflow: hidden;
 
   @include responsive() {
     width: 100%;
