--- a/css/style.css
+++ b/css/style.css
@@ -138,9 +138,10 @@ p {
 }
 
 .spiderman {
-  width: 150%;
+  width: 140%;
   -webkit-transform: translate3d(-170px, 0, 0);
           transform: translate3d(-170px, 0, 0);
+  overflow: hidden;
 }
 
 @media screen and (max-width: 960px) {
